Fix websearchtool issue (#639)
* Fix issue in WebSearchTool

Signed-off-by: zane-neo <zaniu@amazon.com>

* Optimize code

Signed-off-by: zane-neo <zaniu@amazon.com>

* Fix build error

Signed-off-by: zane-neo <zaniu@amazon.com>

* Fix CVE

Signed-off-by: zane-neo <zaniu@amazon.com>

* remove unused file

Signed-off-by: zane-neo <zaniu@amazon.com>

* Fix failure ITs

Signed-off-by: zane-neo <zaniu@amazon.com>

---------

Signed-off-by: zane-neo <zaniu@amazon.com>
(cherry picked from commit 10d97accacda059eaee8044e6a74da39426134ef)
Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>